# flamingo

./: .gitignore  LICENSE  README.md  __init__.py  fitc.py  fitf.py  flamingo.spec  interface.py  opt.py  pyproject.toml  setup.py
.github/workflows/: publish.yml  python-publish.yml  windows-build.yml
Correct_TDS/: __init__.py  fitc.py  fitf.py  interface.py
src/: __init__.py
src/flamingo/: __init__.py  cli.py  gui.py  main.py
src/flamingo.egg-info/: PKG-INFO  SOURCES.txt
src/flamingo/algorithms/: __init__.py  correction_methods.py  error_fit_functions.py
src/flamingo/core/: __init__.py  optimization_parameter.py  processing_pipeline.py
src/flamingo/gui/: __init__.py  components.py
src/flamingo/utils/: __init__.py  helper_functions.py  log_capture.py  progress.py
src/flamingo/visualization/: __init__.py  plot_data.py
